--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "api ecommerce irede.",
   "main": "index.js",
   "scripts": {
+    "dev": "dotenvx run --env-file=\"./env/.env\" -- npx sequelize-cli db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "daniel.marcos.bezerra@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "@dotenvx/dotenvx": "^0.21.0",
+    "express": "^4.18.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "sequelize-cli": "^6.6.2"
   }
 }
