--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api ecommerce irede.",
   "main": "index.js",
   "scripts": {
-    "dev": "dotenvx run --env-file=\"./env/.env\" -- npx sequelize-cli db:migrate",
+    "dev": "dotenvx run --env-file=\"./env/.env\" -- nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "daniel.marcos.bezerra@gmail.com",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^0.21.0",
     "express": "^4.18.2",
+    "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
